--- a/intro.css
+++ b/intro.css
@@ -26,7 +26,7 @@ img{
 }
 /* Hero Section */
 #hero{
-    background-image: url(./istockphoto.jpg);
+    background-image: url(./laptop_cup_glasses.jpg);
     background-size: cover;
     background-position: top cover;
     position: relative;
@@ -58,6 +58,11 @@ img{
     animation:text_reveal .5s ease forwards;
     animation-delay: 1.ss;
 }
+.subject2{
+ font-weight: 100;
+ color: white;
+ padding-top: 12px;
+}
 .subject:nth-child(1){
 animation-delay: 1s;
 }
@@ -74,7 +79,7 @@ animation-delay: 1s;
     left:0;
     height:100%;
     width: 0;
-    background-color: crimson;
+    background-color: purple;
     animation: text_reveal_box 1s ease;
     animation-delay: 1ss;
 }
@@ -92,7 +97,7 @@ animation-delay: 1s;
     padding:10px 30px;
     color: white;
      background-color: transparent;
-     border: 2px solid crimson;
+     border: 2px solid purple;
      font-size: 2rem;
      text-decoration: uppercase; 
      letter-spacing: .1rem;
@@ -102,7 +107,7 @@ animation-delay: 1s;
 }
  .cta:hover {
     color:white;
-    background-color: crimson;
+    background-color: purple;
     cursor: pointer;
 }
 .brand h1{
@@ -111,7 +116,7 @@ animation-delay: 1s;
     color: white;
 }
 .brand h1 span{
-    color: crimson;
+    color: purple;
 }
 /* End Hero Section */
 
@@ -184,7 +189,7 @@ animation-delay: 1s;
     letter-spacing: initial;
 } 
 #header .nav-list ul li:hover a{
-    color:crimson
+    color:purple
 }
 #header .hamburger {
     height: 60px;
@@ -242,7 +247,7 @@ animation-delay: 1s;
 }
 /*End Header section */
 /* Services */
-#services{
+/* #services{
 }
 #services .services{
     flex-direction: column;
@@ -261,6 +266,7 @@ animation-delay: 1s;
     letter-spacing: .2rem;
     text-align: center;
 }
+
 
 p {
     color: black; 
@@ -325,7 +331,7 @@ p {
     text-align: left;
     font-size: 1.4rem;
     line-height: 1.9rem;
-}
+} */
 /* Projects section */
 #projects .projects {
     flex-direction: column;
@@ -333,6 +339,14 @@ p {
     margin: 0 auto;
     padding: 100px 0; 
  }
+ p {
+    color: black; 
+    font-size: 1.4rem;
+    margin-top: 5px;
+    line-height: 2.5rem;
+    font-weight: 300;
+    letter-spacing: .05rem;
+}
  #projects .projects-header h1 {
      margin-bottom: 50px;
  }
@@ -358,7 +372,7 @@ p {
      border-radius: 10px;
  } 
  .section-title span {
-     color: crimson;
+     color: purple;
  }
  #projects .project-info {
      padding: 30px;
@@ -482,6 +496,7 @@ p {
     flex-direction: column;
     max-width: 1200px;
     margin: 0 auto;
+    color: black;
 }
 #contact .contact-items{
     width: 400px;
@@ -512,11 +527,14 @@ p {
     font-size: 2.5rem;
     font-weight: 500;
     margin-bottom: 5px;
+    color: black;
 }
 #contact .contact-info h2{
     font-size: 1.3rem;
     line-height: 2rem;
     font-weight: 500;
+    color: black;
+
 }
 /* End Contact Section */
 /* Footer */
@@ -587,7 +605,7 @@ p {
 }
 @keyframes text_reveal_name {
     100%{
-        color: crimson;
+        color: purple;
         font-weight: 500;
     }
 }
@@ -606,6 +624,7 @@ p {
     #hero h1{
         font-size: 4rem;
     }
+
     /* End Hero */
     /* Service Section */
     #services .service-bottom .service-item {
@@ -627,6 +646,7 @@ p {
         width: 100%;
         border-radius: 0;
      }
+    
      #projects .all-projects .project-info{
         height: 100%;
      }
@@ -648,7 +668,7 @@ p {
         top: 34px;
         height: 98%;
         width: 98%;
-        border: 10px solid crimson;
+        border: 10px solid purple;
     }
     #about .col-right{
         text-align: left;
