--- a/intro.css
+++ b/intro.css
@@ -245,93 +245,7 @@ animation-delay: 1s;
 #header .hamburger.active .bar::after{
     top:0;
 }
-/*End Header section */
-/* Services */
-/* #services{
-}
-#services .services{
-    flex-direction: column;
-    text-align: center;
-    max-width: 1500px;
-    margin: 0 auto;
-    padding:100px 0;
-}
 
-.section-title {
-    font-size: 4rem;
-    font-weight: 300;
-    color: black;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-    letter-spacing: .2rem;
-    text-align: center;
-}
-
-
-p {
-    color: black; 
-    font-size: 1.4rem;
-    margin-top: 5px;
-    line-height: 2.5rem;
-    font-weight: 300;
-    letter-spacing: .05rem;
-}
-#services .service-top {
-    max-width: 500px;
-    margin: 0 auto;
-}
-#services .service-bottom {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 50px;
-} 
-#services .service-item {
-    flex-basis: 80%;
-    display:flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    padding: 30px;
-    border-radius: 10px;
-    background-image: url(./laptop_cup_glasses.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin: 10px 5%;
-    position: relative;
-    z-index: 1;
-    overflow:hidden;
-}
-#services .service-item::after {
-    content: ''; 
-    position: absolute;
-    left:0;
-    top:0;
-    height:100%;
-    width:100%;
-    background-color: linear-gradient(60deg, #29323c 0%, #485563 100%);
-    opacity: .9;
-    z-index: -1;
-}
-#serice .service-bottom .icon {
-    height: 80px;
-    width: 80px;
-    margin-bottom: 20px;
-}
-
-#services .service-item h2 {
-    font-size: 2rem;
-    color:white;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-}
-#services .service-item p {
-    color: white;
-    text-align: left;
-    font-size: 1.4rem;
-    line-height: 1.9rem;
-} */
 /* Projects section */
 #projects .projects {
     flex-direction: column;
@@ -371,6 +285,9 @@ p {
      overflow: hidden; 
      border-radius: 10px;
  } 
+ .section-title{
+    margin-bottom: 18px;
+ }
  .section-title span {
      color: purple;
  }
@@ -429,6 +346,9 @@ p {
  #projects .project-item:hover .project-img img {
      transform: scale(1.1);
  }
+   #projects .all-projects .project-img .card-img{
+        object-fit: contain;
+     }
 /* End Of Service Section*/
 /* About Section */
 #about .about-img img{
@@ -443,6 +363,7 @@ p {
     margin: 0 auto;
     padding: 100px 20px;
 }
+
 #about .col-left {
     width: 250px;
     height: 360px;
@@ -556,6 +477,7 @@ p {
     margin-bottom: 10px;
 }
 #footer .social-icon{
+    margin-top: 10px;
     display:flex;
     margin-bottom: 30px;
 }
