--- a/intro.css
+++ b/intro.css
@@ -352,7 +352,7 @@ animation-delay: 1s;
 /* End Of Service Section*/
 /* About Section */
 #about .about-img img{
-    min-height: 100%;
+    /* min-height: 100%; */
     width: 100%;
     object-fit: cover;
 }
@@ -365,6 +365,7 @@ animation-delay: 1s;
 }
 
 #about .col-left {
+    display: none;
     width: 250px;
     height: 360px;
 }
@@ -411,6 +412,7 @@ animation-delay: 1s;
     border: 7px solid crimson;
     z-index: -1;
 }
+
 /* End About */
 /* Contact Section */
 #contact .contact {
@@ -588,6 +590,7 @@ animation-delay: 1s;
         width: 600px;
         height: 400px;
         padding-left: 60px;
+        display: inline;
     }
     #about .about .col-left .about-img::after{
         left: -45px;
@@ -637,6 +640,7 @@ animation-delay: 1s;
         padding-left: 20px;
     }
     /* End Contact */
+    
 }
 /* End Media Query For Tablet */
 
